feat: Implement update task api endpoint
