# openapi/resources/task/paths/item.yml
@@ -1,5 +1,5 @@
 paths:
-  /api/task/{taskId}:
+  /api/tasks/{taskId}:
     get:
       operationId: getTaskById
       summary: Get task by ID
@@ -31,6 +31,46 @@ paths:
           $ref: "../../../shared/responses/not-found.yml"
         "500":
           $ref: "../../../shared/responses/internal-server-error.yml"
+    patch:
+      operationId: updateTaskById
+      summary: Update task by ID
+      description: Update task by ID
+      tags:
+        - task
+      parameters:
+        - name: taskId
+          in: path
+          required: true
+          schema:
+            type: string
+            example: "tsk_QsWNVMPBtXjDLiNfpMaWWw"
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "../schemas/update-task-request.yml"
+      responses:
+        "200":
+          description: Task updated successfully
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: "../../../shared/schemas/success.yml"
+                  - type: object
+                    properties:
+                      message:
+                        example: "Task updated successfully"
+                      data:
+                        $ref: "../schemas/update-task-response.yml"
+        "400":
+          $ref: "../../../shared/responses/bad-request.yml"
+        "404":
+          $ref: "../../../shared/responses/not-found.yml"
+        "500":
+          $ref: "../../../shared/responses/internal-server-error.yml"
+
   /api/{projectId}/tasks:
     post:
       operationId: createTask
@@ -50,6 +90,7 @@ paths:
           required: true
           schema:
             type: string
+            example: "proj_QsWNVMPBtXjDLiNfpMaWWw"
       responses:
         "200":
           description: Task created successfully
